8241319: WB_GetCodeBlob doesn't have ResourceMark

Reviewed-by: iignatyev, thartmann